cmake_minimum_required(VERSION 3.22)
project(intitled)

set(CMAKE_C_STANDARD 17)

add_executable(contest2_aa mmap/make-spiral-file/make-spiral-file.c)
add_executable(exec-python exec/exec-python.c)
add_executable(exec-gcc.c exec/exec-gcc.c)
add_executable(print-list-posix Low-level-file-IO/print-list-posix/print-list-posix.c)
add_executable(sort-file-contents Low-level-file-IO/sort-file-contents/sort-file-contents.c)
add_executable(find-invalid-executables attributes-of-files-fd/find-invalid-executables/find-invalid-executables.c)
add_executable(manage-symlinks attributes-of-files-fd/manage-symlinks/manage-symlinks.c)
add_executable(normalize_path attributes-of-files-fd/normalize-path/normalize-path.c)
add_executable(find-substrings-in-file mmap/find-substrings-in-file/find-substrings-in-file.c)
add_executable(print-list-using-mmap mmap/print-list-using-mmap/print-list-using-mmap.c)
add_executable(proc-count-words fork/proc-count-words/proc-count-words.c)
add_executable(ping-pong-threads-socketpair threads/ping-pong-threads-socketpair.c)
add_executable(parallel-sum threads/parallel-sum.c)
add_executable(th-mutex threads/mutex.c)
add_executable(th-condvar threads/condvar.c)
add_executable(th-atomic threads/atomic.c)
add_executable(launch pipe/launch.c)
add_executable(connect-2-processes pipe/connect-2-processes.c)
add_executable(process-gcc-output-2 pipe/process-gcc-output-2.c)
add_executable(connect-n-processes pipe/connect-n-processes.c)
add_executable(count-sigint signals/count-sigint.c)
add_executable(do-actions signals/do-actions.c)
add_executable(signalfd-rtsig signals/signalfd-rtsig.c)
add_executable(ping-pong-using-signals signals/ping-pong-using-signals.c)