cmake_minimum_required(VERSION 3.22)
project(intitled)

set(CMAKE_C_STANDARD 17)

add_executable(mmap-make-spiral-file mmap/make-spiral-file/make-spiral-file.c)
add_executable(exec-python exec/exec-python.c)
add_executable(exec-gcc.c exec/exec-gcc.c)
add_executable(Low-level-file-IO-print-list-posix Low-level-file-IO/print-list-posix/print-list-posix.c)
add_executable(Low-level-file-IO-sort-file-contents Low-level-file-IO/sort-file-contents/sort-file-contents.c)
add_executable(attributes-of-files-fd-find-invalid-executables attributes-of-files-fd/find-invalid-executables/find-invalid-executables.c)
add_executable(attributes-of-files-fd-manage-symlinks attributes-of-files-fd/manage-symlinks/manage-symlinks.c)
add_executable(attributes-of-files-fd-normalize_path attributes-of-files-fd/normalize-path/normalize-path.c)
add_executable(mmap-find-substrings-in-file mmap/find-substrings-in-file/find-substrings-in-file.c)
add_executable(mmap-print-list-using-mmap mmap/print-list-using-mmap/print-list-using-mmap.c)
add_executable(fork-proc-count-words fork/proc-count-words/proc-count-words.c)
add_executable(threads-ping-pong-threads-socketpair threads/ping-pong-threads-socketpair.c)
add_executable(threads-parallel-sum threads/parallel-sum.c)
add_executable(threads-th-mutex threads/mutex.c)
add_executable(threads-th-condvar threads/condvar.c)
add_executable(threads-th-atomic threads/atomic.c)
add_executable(pipe-launch pipe/launch.c)
add_executable(pipe-connect-2-processes pipe/connect-2-processes.c)
add_executable(pipe-process-gcc-output-2 pipe/process-gcc-output-2.c)
add_executable(pipe-connect-n-processes pipe/connect-n-processes.c)
add_executable(signals-count-sigint signals/count-sigint.c)
add_executable(signals-do-actions signals/do-actions.c)
add_executable(signals-signalfd-rtsig signals/signalfd-rtsig.c)
add_executable(signals-ping-pong-using-signals signals/ping-pong-using-signals.c)
add_executable(sockets-tcp-client sockets/tcp-client.c)
add_executable(sockets-http-server-1 sockets/http-server-1.c)
add_executable(sockets-http-server-2 sockets/http-server-2.c)
add_executable(sockets-udp-client sockets/udp-client.c)
add_executable(sockets-icmp-ping sockets/icmp-ping.c)
add_executable(highload-epoll-read-fds-vector highload/epoll-read-fds-vector.c)
add_executable(highload-epoll-read-write-socket highload/epoll-read-write-socket.c)
